--- a/osi-trainer.html
+++ b/osi-trainer.html
@@ -53,7 +53,10 @@
                 <h3>Protokoll-Zuordnungsspiel</h3>
                 <p id="protocol-matching-instructions">Ordne das Protokoll seiner korrekten OSI-Schicht zu.</p>
                 <div id="protocol-question-area">
-                    <p>Protokoll: <span id="protocol-name-display"></span></p>
+                    <h4>Aktuelles Protokoll:</h4>
+                    <p><strong>Name:</strong> <span id="protocol-name-display"></span></p>
+                    <p><strong>Voller Name:</strong> <span id="protocol-fullname-display"></span></p>
+                    <p><strong>Beschreibung:</strong> <span id="protocol-explanation-display"></span></p>
                 </div>
                 <div id="protocol-options-area">
                     <!-- Schichtoptionen werden hier per JS generiert -->
