--- a/osi-trainer.html
+++ b/osi-trainer.html
@@ -26,16 +26,18 @@
             <section id="drag-drop-exercise" class="exercise-container" style="display: none;">
                 <h3>Drag & Drop Schichten-Puzzle</h3>
                 <p id="drag-drop-instructions">Ziehe die Schichten an ihre korrekten Positionen.</p>
-                <div id="draggable-layers-container">
-                    <p>Zu ziehende Schichten:</p>
-                    <div id="draggable-layers">
-                        <!-- Ziehbare Schichtkarten werden hier per JS generiert -->
+                <div class="drag-drop-layout-container">
+                    <div id="draggable-layers-container">
+                        <p>Zu ziehende Schichten:</p>
+                        <div id="draggable-layers">
+                            <!-- Ziehbare Schichtkarten werden hier per JS generiert -->
+                        </div>
                     </div>
-                </div>
-                <div id="layer-slots-container">
-                    <p>Ziel-Steckplätze:</p>
-                    <div id="layer-slots">
-                        <!-- Schicht-Steckplätze werden hier per JS generiert -->
+                    <div id="layer-slots-container">
+                        <p>Ziel-Steckplätze:</p>
+                        <div id="layer-slots">
+                            <!-- Schicht-Steckplätze werden hier per JS generiert -->
+                        </div>
                     </div>
                 </div>
                 <button id="reset-drag-drop-puzzle">Puzzle zurücksetzen</button>
