--- a/index.html
+++ b/index.html
@@ -212,6 +212,12 @@
             </div>
         </section>
 
+        <section id="finalQuiz" class="osi-exercise">
+            <div class="exercise-iframe-container">
+                <iframe src="final_quiz.html" style="width: 100%; height: 550px; border: none; border-radius: 8px;"></iframe> <!-- Increased height for 5 questions -->
+            </div>
+        </section>
+
     </main>
 
     <footer>
